@@ -1,3 +1,8 @@
+1998-02-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Value2dDisplay.m ([Value -setDisplayWidget:colormap:]): Use
+	methodFor in USE_JAVA case.  (temporary)
+
 1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Value2dDisplay.h: Rename Colormap: key to colormap:.
